--- a/components/game/game-sheet.css
+++ b/components/game/game-sheet.css
@@ -11,7 +11,15 @@
 }
 
 .bright {
-    filter: brightness(1.3);
+    filter: brightness(2);
+    transition-delay: 0.5s;
+    transition-property: filter;
+    transition-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+.bright img {
+    filter: brightness(0.6);
     transition-delay: 0.5s;
     transition-property: filter;
     transition-duration: 2s;
@@ -26,6 +34,20 @@
 }
 
 .game-sheet-vertical-gradient {
+    z-index: 10;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(2,1,41,0) 3%, rgba(9,9,121,0) 97%, rgba(0,0,0,0.5) 100%);
+    pointer-events: none;
+}
+
+.game-sheet-back-gradient-horizontal {
+    z-index: 10;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0.8) 0%, rgba(2,1,41,0) 3%, rgba(9,9,121,0) 97%, rgba(0,0,0,0.5) 100%);
+    pointer-events: none;
+}
+
+.game-sheet-back-gradient-vertical {
     z-index: 10;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(2,1,41,0) 3%, rgba(9,9,121,0) 97%, rgba(0,0,0,0.5) 100%);
